syntax = "proto3";
package proto;

option go_package = "github.com/redjack;distributed_grep";

// I task di Map e di Reduce
service GrepTask {
  rpc Map(GrepInput) returns (GrepOutput);
  rpc Reduce(GrepInput) returns (GrepOutput);
}

// Il messaggio di richiesta master-worker
message GrepInput {
  string file_portion = 1;
  string regex = 2;
  int32 worker_id = 3;
}

// il messaggio di risposta che il worker deve inviare al master
message GrepOutput {
  string rows = 1;
  int64 row_number = 2;
  int32 worker_id = 3;
}

